Update color codes, dark mode and few bug fixes.

--- a/src/components/Content/style.css
+++ b/src/components/Content/style.css
@@ -8,7 +8,7 @@
 
 .tabs-wrapper {
   margin-top: 8px;
-  border: 1px solid rgb(230, 230, 230);
+  border: 1px solid var(--bordergrey);
   border-radius: 4px;
   box-sizing: border-box;
   display: flex;
@@ -19,14 +19,14 @@
   padding: 1px 16px;
   box-sizing: border-box;
   font-weight: 400;
-  color: rgb(120, 120, 120);
+  color: var(--tabbtntext);
   box-sizing: border-box;
   cursor: pointer;
 }
 
 .view-toggle-wrapper button.selected {
-  color: rgb(78, 78, 78);
-  background: rgb(230, 230, 230);
+  color: var(--tabbtntextselected);
+  background: var(--bordergrey);
   border-radius: 3px;
 }
 
@@ -73,7 +73,7 @@
 
 .month-today-wrapper .today-wrapper button {
   background: transparent;
-  border: 1px solid rgb(230, 230, 230);
+  border: 1px solid var(--bordergrey);
   padding: 2px 8px;
   margin: 0 1px;
   font-size: .85rem;
@@ -92,5 +92,5 @@
   font-weight: 400;
   font-size: 1.2rem;
   margin-top: -8px;
-  color: rgb(38, 38, 38);
+  color: var(--greytext);
 }
