--- a/src/components/Month/style.css
+++ b/src/components/Month/style.css
@@ -14,16 +14,16 @@
   text-align: right;
   padding-top: 8px;
   padding-right: 6px;
-  border-top: 1px solid rgb(230, 230, 230);
-  border-right: 1px solid rgb(230, 230, 230);
+  border-top: 1px solid var(--bordergrey);
+  border-right: 1px solid var(--bordergrey);
   min-height: 14vh;
   box-sizing: border-box;
   font-weight: 500;
 }
 
 .month-row .sunday {
-  background-color: rgb(245, 245, 245);
-  color: rgb(123, 123, 123);
+  background-color: var(--lightgrey);
+  color: var(--tabbtntext);
 }
 
 .month-helper-row {
@@ -40,17 +40,17 @@
 }
 
 .month-helper-row > div.sunday {
-  color: rgb(123, 123, 123);
+  color: var(--tabbtntext);
 }
 
 .color-sunday {
-  color: rgb(123, 123, 123);
+  color: var(--tabbtntext);
 }
 
 .today {
-  background-color: rgb(252, 61, 57);
+  background-color: var(--red);
   color: white;
   border-radius: 50%;
-  padding: 4px 8px;
+  padding: 4px 10px;
   text-align: center;
 }
